# P_C_backend

./: .env  .gitignore  DEVELOPMENT.md  README.md  business_plan.md  fly.toml  main.py  models.py  package-lock.json  package.json  prd.md  pyproject.toml  requirements.txt  routes.py  test_api.py  test_error_handling.py  tsconfig.json  video_analysis.py
fastapi_app/: .env  pyproject.toml  test_helper.py  test_output.json  verification.json
fastapi_app/app/: database.py  main.py  models.py
fastapi_app/app/routers/: auth.py  videos.py
fastapi_app/app/services/: email.py  gemini.py  video.py
fastapi_app/migrations/: 001_create_video_tables.sql
fastapi_app/tests/: .env.test  __init__.py  conftest.py  generate_test_video.py  test_video_analysis.py  test_video_upload.py
fastapi_app/tests/mocks/: gemini_service.py
src/: app.ts  server.ts
src/config/: database.ts  swagger.ts
src/controllers/: auth.controller.ts  video.controller.ts
src/middleware/: auth.ts  upload.ts
src/models/: analysis.model.ts  user.model.ts  verification.model.ts  video.model.ts
src/routes/: auth.routes.ts  video.routes.ts
src/services/: analysis.service.ts  email.service.ts
src/types/: ffmpeg-extract-frames.d.ts
